[build-system]
requires = ["setuptools", "cython>=3.0.0", "numpy"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["fish2pano", "fish2pano.tests"]


[project]
name = "fish2pano"
requires-python = ">=3.7"
version = "0.3.0"
readme = "README.md"
dependencies = [
    "numpy"
]
authors = [
    { name = "Russell Valentine", email = "russell.valentine@gmail.com" }]
description = "A library to convert numpy fisheye images to panoramic."
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/bluthen/fish2pano"
Issues = "https://github.com/bluthen/fish2pano/issues"

